--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,10 @@
       </h1>
 
       <ul class="nav">
+        <li><%= link_to 'posts', posts_path %></li>
         <li><%= link_to 'neighborhoods', neighborhoods_path %></li>
         <li><%= link_to 'topics', topics_path %></li>
         <li><a href="#">store</a></li>
-        <li><a href="#">subscribe</a></li>
         <li><%= link_to 'about', page_path('about') %></li>
         <% if user_signed_in? %>
         <li><a href="#">account</a></li>
