--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,35 +1,37 @@
-<% if @posts.size > 0 %>
-<section id="posts" class="group">
-  <h1>Recent posts:</h1>
-  <% @posts.each do |post| %>
-    <div class="post group-item">
-      <h2><%= link_to post.title, post %></h2>
-      <div><%= teaser(post.content) %></div>
-    </div>
+<div class="main-content">
+  <% if @posts.size > 0 %>
+  <section id="posts" class="group">
+    <h1 class="group-title">Recent posts:</h1>
+    <% @posts.each do |post| %>
+      <div class="post group-item">
+        <h2><%= link_to post.title, post %></h2>
+        <div><%= teaser(post.content) %></div>
+      </div>
+    <% end %>
+  </section>
   <% end %>
-</section>
-<% end %>
+</div>
 
-<% if @neighborhoods.size > 0 %>
-<section id="neighborhoods" class="group">
-  <h1>Seattle neighborhoods:</h1>
-  <% @neighborhoods.each do |n| %>
-    <div class="neighborhood group-item">
-      <h2><%= link_to n.name, n %></h2>
-      <div><%= teaser(n.description) %></div>
-    </div>
+<div class="sidebar">
+  <% if @neighborhoods.size > 0 %>
+  <section id="neighborhoods" class="group">
+    <h1 class="group-title">Neighborhoods:</h1>
+    <% @neighborhoods.each do |n| %>
+      <div class="neighborhood group-item">
+        <h2><%= link_to n.name, n %></h2>
+      </div>
+    <% end %>
+  </section>
   <% end %>
-</section>
-<% end %>
 
-<% if @topics.size > 0 %>
-<section id="topics" class="group">
-  <h1>Seattle topics:</h1>
-  <% @topics.each do |t| %>
-    <div class="topic group-item">
-      <h2><%= link_to t.name, t %></h2>
-      <div><%= teaser(t.description) %></div>
-    </div>
+  <% if @topics.size > 0 %>
+  <section id="topics" class="group">
+    <h1 class="group-title">Topics:</h1>
+    <% @topics.each do |t| %>
+      <div class="topic group-item">
+        <h2><%= link_to t.name, t %></h2>
+      </div>
+    <% end %>
+  </section>
   <% end %>
-</section>
-<% end %>
+</div>
