revise small group css

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,7 +14,7 @@
 
 <div class="sidebar">
   <% if @neighborhoods.size > 0 %>
-  <section id="neighborhoods" class="group">
+  <section id="neighborhoods" class="group small">
     <h1 class="group-title">Neighborhoods:</h1>
     <% @neighborhoods.each do |n| %>
       <div class="neighborhood group-item">
