--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -279,40 +279,38 @@ a.read-more:hover {
   .group-title { margin-top: 0px; }
 }
 
-.sidebar {
-  .group {
-    margin-bottom: 50px;
-  }
+.group.small {
+  margin-bottom: 50px;
+}
 
-  .group-title {
-    font-size: 20px;
-  }
+.group.small .group-title {
+  font-size: 20px;
+}
 
-  .group-item {
-    font-size: 10px;
-    border-bottom: 0px;
-    margin-bottom: 0px;
-  }
+.group.small .group-item {
+  font-size: 10px;
+  border-bottom: 0px;
+  margin-bottom: 0px;
+}
 
-  .group-item a {
-    font-size: 15px;
-    padding: 4px 10px;
-    border-left: 4px solid #f2f2f0;
-    border-bottom: 0px;
-    display: block;
-  }
+.group.small .group-item a {
+  font-size: 15px;
+  padding: 4px 10px;
+  border-left: 4px solid #f2f2f0;
+  border-bottom: 0px;
+  display: block;
+}
 
-  .group-item a:hover {
-    font-size: 15px;
-    padding: 4px 10px;
-    border-left: 4px solid #e2e2e0;
-    border-bottom: 0px;
-    background-color: #fafafa;
-  }
+.group.small .group-item a:hover {
+  font-size: 15px;
+  padding: 4px 10px;
+  border-left: 4px solid #e2e2e0;
+  border-bottom: 0px;
+  background-color: #fafafa;
+}
 
-  .group-item-title {
-    margin-bottom: 40px;
-  }
+.group.small .group-item-title {
+  margin-bottom: 40px;
 }
 
 
