--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,10 @@
         <li><%= link_to 'about', page_path('about') %></li>
         <% if user_signed_in? %>
         <li><a href="#">account</a></li>
+        <% if current_user && current_user.admin? %>
+        <li><%= link_to 'admin', rails_admin_path %></li>
         <li><%= link_to('log out', destroy_user_session_path, :method => :delete) %></li>
+        <% end %>
         <% else %>
         <li><%= link_to "sign in", new_user_session_path %></li>
         <li><%= link_to "create account", new_user_registration_path %></li>
