--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#team-members {
+  margin: 0px;
+  padding: 0px;
+}
+
+.team-member {
+  list-style-type: none;
+  border-bottom: 1px solid #efefec;
+  margin-bottom: 20px;
+}
+
+.team-member img {
+  float: left;
+  display: block;
+  margin-right: 20px;
+  margin-bottom: 10px;
+  width: 100px;
+  height: auto;
+}
