--- a/app/views/neighborhoods/index.html.erb
+++ b/app/views/neighborhoods/index.html.erb
@@ -2,9 +2,9 @@
   <h1 class="topic-title">Neighborhoods</h1>
 
   <ul class="topic-toolbar">
-    <li class="active"><a href="#">List</a></li>
+    <!--<li class="active"><a href="#">List</a></li>-->
     <!--<li><a href="#">Map</a></li>-->
-    <li><a href="#">Discuss</a></li>
+    <!--<li><a href="#">Discuss</a></li>-->
   </ul>
 </div>
 
