--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,25 +13,6 @@
 </div>
 
 <div class="sidebar">
-  <% if @topics.size > 0 %>
-  <section id="topics" class="group small">
-    <h1 class="group-title">Topics:</h1>
-    <% @topics.each do |t| %>
-      <div class="topic group-item">
-        <h2><%= link_to t.name, t %></h2>
-      </div>
-    <% end %>
-  </section>
-  <% end %>
-
-  <% if @neighborhoods.size > 0 %>
-  <section id="neighborhoods" class="group small">
-    <h1 class="group-title">Neighborhoods:</h1>
-    <% @neighborhoods.each do |n| %>
-      <div class="neighborhood group-item">
-        <h2><%= link_to n.name, n %></h2>
-      </div>
-    <% end %>
-  </section>
-  <% end %>
+  <%= render "shared/topics_small_list" %>
+  <%= render "shared/neighborhoods_small_list" %>
 </div>
