--- a/app/views/neighborhoods/show.html.erb
+++ b/app/views/neighborhoods/show.html.erb
@@ -2,9 +2,9 @@
   <h1 class="topic-title"><%= @neighborhood.name %></h1>
 
   <ul class="topic-toolbar">
-    <li class="active"><a href="#info">Info</a></li>
+    <!--<li class="active"><a href="#info">Info</a></li>-->
     <li><a href="#recent-posts">Posts</a></li>
-    <li><a href="#">Discuss</a></li>
+    <!--<li><a href="#">Discuss</a></li>-->
     <% if can? :manage, @neighborhood %>
     <li><%= link_to 'Settings', edit_neighborhood_path(@neighborhood) %></li>
     <% end %>
