--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,23 @@
 
 <footer>
   <div class="container">
-    
+    <h1>Hi buds! This is an early preview of seattle.io!</h1>
+    <p>We're starting with just a few pilot neighborhoods and topics. Soon we'll expand to cover more of Seattle.</p>
+    <ul id="hello-footer">
+      <li>
+        <h3>Pilot neighborhoods</h3>
+        <p><a href="/neighborhoods/pioneer-square">Pioneer Square</a> and <a href="/neighborhoods/university-district">University District</a> are the first neighborhoods we're including in the guide to Seattle's neighborhoods. More coming soon! Want to help get your neighborhood included? <a href="mailto:hi@seattle.io">Let us know!</a></p>
+      </li>
+      <li>
+        <h3>Pilot topics</h3>
+        <p>The first topic/community we're covering at seattle.io is locally-made games and the people who make them! We'll be producing a series of short books called <a href="topics/play-local"><i>Play Local</i></a> featuring interviews, how-to articles, and other stories about games and game designers in Seattle.</p>
+      </li>
+      <li>
+        <h3>Get involved</h3>
+        <p>Want to get involved in seattle.io as a volunteer or paid contributor? <a href="http://eepurl.com/Da5HH">Join our email newsletter</a> to find out about opportunities. You can also join our <a href="http://www.meetup.com/seattle-io/">Meetup group</a> to find out about upcoming events.</p>
+      </li>
+    </ul>
+
   </div>
 </footer>
 
