--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,25 @@
+<section id="hello-main">
+  <h1>seattle.io is a guide to the city's neighborhoods & communities.</h1>
+  <!-- Begin MailChimp Signup Form -->
+  <p>This is an early preview! Sign up for our email newsletter to find out when we launch and how you can get involved:</p>
+<div id="mc_embed_signup">
+<form action="http://seattle.us5.list-manage1.com/subscribe/post?u=b5b4f7fda673e887e9380b619&amp;id=0884c4f1e3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+  
+<div class="mc-field-group">
+  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" autofocus="true" placeholder="your email">
+  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+</div>
+  <div id="mce-responses" class="clear">
+    <div class="response" id="mce-error-response" style="display:none"></div>
+    <div class="response" id="mce-success-response" style="display:none"></div>
+  </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_b5b4f7fda673e887e9380b619_0884c4f1e3" value=""></div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
+</section>
+
 <div class="main-content">
   <% if @posts.size > 0 %>
   <section id="posts" class="group">
