update footer li size

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -446,9 +446,10 @@ textarea.content-input {
 
 #hello-footer li {
   text-align: left;
-  width: 32%;
+  width: 280px;
   vertical-align: top;
   font-size: 90%;
+  display: inline-block;
 }
 
 #hello-footer li p {
