--- a/app/views/neighborhoods/show.html.erb
+++ b/app/views/neighborhoods/show.html.erb
@@ -15,7 +15,7 @@
 <section id="topic-description">
   <div id="map-display"></div>
 
-  <p><%= @neighborhood.description %></p>
+  <p><%= markdown(@neighborhood.description) %></p>
 </section>
 <hr>
 
