--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -13,7 +13,7 @@
 </div>
 
 <section id="topic-description">
-  <p><%= @topic.description %></p>
+  <p><%= markdown(@topic.description) %></p>
 </section>
 <hr>
 
