fix neighborhood show map

--- a/app/views/neighborhoods/show.html.erb
+++ b/app/views/neighborhoods/show.html.erb
@@ -13,6 +13,7 @@
 </div>
 
 <section id="topic-description">
+  <div id="map-display"></div>
   <p><%= markdown(@neighborhood.description) %></p>
 </section>
 <hr>
