get the admin icons back

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
       </li>
       <li>
         <h3>Pilot topics</h3>
-        <p>The first topic/community we're covering at seattle.io is locally-made games and the people who make them! We'll be producing a series of short books called <a href="topics/play-local"><i>Play Local</i></a> featuring interviews, how-to articles, and other stories about games and game designers in Seattle.</p>
+        <p>The first topics we're covering at seattle.io are civic technology & locally-made games! We'll be producing a series of short books called <a href="topics/play-local"><i>Play Local</i></a> featuring interviews, how-to articles, and other stories about games and game designers in Seattle.</p>
       </li>
       <li>
         <h3>Get involved</h3>
