--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,7 @@
         <%= link_to post.title, post %>
       </h2>
 
-        <%= teaser(post.content) %>
+      <p><%= teaser(post.content) %></p>
     </div>
   <% end %>
   </div>
