--- a/app/views/neighborhoods/show.html.erb
+++ b/app/views/neighborhoods/show.html.erb
@@ -58,7 +58,7 @@
   <% @neighborhood.posts.each do |post| %>
     <div class="post group-item">
       <h2><%= link_to post.title, post %></h2>
-      <div><%= teaser(post.content) %></div>
+      <p><%= teaser(post.content) %></p>
     </div>
   <% end %>
   </div>
