--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
       </li>
       <li>
         <h3>Pilot topics</h3>
-        <p>The first topics we're covering at seattle.io are civic technology & locally-made games! We'll be producing a series of short books called <a href="topics/play-local"><i>Play Local</i></a> featuring interviews, how-to articles, and other stories about games and game designers in Seattle.</p>
+        <p>The first topics we're covering at seattle.io are <a href="/topics/civic-technology">civic technology</a> & <a href="/topics/games">locally-made games</a>! We'll be producing a series of short books called <i>Play Local</i> featuring interviews, how-to articles, and other stories about games and game designers in Seattle.</p>
       </li>
       <li>
         <h3>Get involved</h3>
