--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -212,6 +212,10 @@ input[type="submit"]:focus {
   color: #fff;
 }
 
+a.button {
+  padding: 11px 10px 10px 10px;
+}
+
 section h1 {
   font-weight: 100;
   text-align: center;
