edit to hello-main message

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <section id="hello-main">
   <h1>seattle.io is a guide to the city's neighborhoods & communities.</h1>
   <!-- Begin MailChimp Signup Form -->
-  <p>This is an early preview! Sign up for our email newsletter to find out when we launch and how you can get involved:</p>
+  <p>This is an early preview! Sign up for our newsletter to find out when we launch and how you can get involved:</p>
 <div id="mc_embed_signup">
 <form action="http://seattle.us5.list-manage1.com/subscribe/post?u=b5b4f7fda673e887e9380b619&amp;id=0884c4f1e3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
   
