--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       <ul class="nav">
         <li><%= link_to 'posts', posts_path %></li>
         <li><%= link_to 'neighborhoods', neighborhoods_path %></li>
-        <li><%= link_to 'topics', topics_path %></li>
+        <li><%= link_to 'communities', communities_path %></li>
         <!--<li><a href="#">store</a></li>-->
         <li><%= link_to 'about', page_path('about') %></li>
         <% if user_signed_in? %>
