fix post show view

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,7 +9,7 @@
     <% end %>
 
     <% if @post.topic %>
-      <li><%= link_to @post.topic['name'], @post.topic %></li>
+      <li><%= link_to @post.community['name'], @post.community %></li>
     <% end %>
   </ul>
 
