fix post show view

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,7 +8,7 @@
       <li><%= link_to @post.neighborhood['name'], @post.neighborhood %></li>
     <% end %>
 
-    <% if @post.topic %>
+    <% if @post.community %>
       <li><%= link_to @post.community['name'], @post.community %></li>
     <% end %>
   </ul>
