fix post main image

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -324,6 +324,10 @@ section.group {
   margin-bottom: 40px;
 }
 
+.group-item.post h2 {
+  font-size: 1.3em;
+}
+
 
 footer {
   margin: 70px 0px 50px 0px;
