add page titles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>seattle.io</title>
+  <title><%= yield(:title) %> | seattle.io</title>
   <link href='http://fonts.googleapis.com/css?family=Lora:400,400italic|Open+Sans:400,300,800' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag "application" %>
