--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,5 @@
+<% title 'Recent posts' %>
+
 <div class="main-content">
   <section class="posts group">
   <h1 class="group-title">Recent posts:</h1>
