--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
+<% title 'A guide to Seattle\'s neighborhoods and communities' %>
+
 <section id="hello-main">
   <h1>seattle.io is a guide to the city's neighborhoods & communities.</h1>
   <!-- Begin MailChimp Signup Form -->
